monitoring/thanos-sidecar.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: prometheus-sidecar
    app.kubernetes.io/instance: thanos-sidecar
    app.kubernetes.io/name: thanos-sidecar    
  name: monitoring-kube-prometheus-thanos-sidecar
  namespace: monitoring
spec:
  clusterIP: None
  ports:
  - name: http
    port: 10902
    targetPort: 10902
  selector:
    app.kubernetes.io/name: prometheus
